add route and small order of files

--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* margin: 0 1rem 0 1rem; */
 }
 
 .container__card {
@@ -30,43 +29,25 @@
 }
 
 .card-minimi {
-  width: 3rem;
   height: 6rem;
-}
-
-.card__noshow-unselect {
-  height: 8rem;
-  width: 5rem;
-  background-color: #e8e9ea;
+  width: 3.5rem;
   border-radius: 0.9rem;
   cursor: pointer;
 }
 
-.card__number {
-  color: var(--color-secondary);
-  font-weight: bold;
-}
-
-.card-medium:hover {
-  width: 6.3rem;
-  height: 10.3rem;
-  background-color: #d7e9ff;
-  transform: translateY(-1px);
-}
-
-.container__card:hover .card__number {
-  /* color: var(--color-principal); */
-}
-
-.card__name {
-  margin: 10px 0 0 0;
+.card__noshow-unselect {
+  /* height: 6rem;
+  width: 3.5rem;
+  border-radius: 0.9rem;
+   */
+  background-color: #e8e9ea;
 }
 
 .card__noshow-select {
+  /* height: 6rem;
+  width: 3.5rem;
+  border-radius: 0.6rem; */
   align-items: center;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  background: #3993ff;
   background: linear-gradient(
       45deg,
       #3993ff 12%,
@@ -91,11 +72,29 @@
     #74b3ff;
   background-size: 17px 17px;
   border: 1px solid hsla(204, 6%, 68%, 0.4);
-  border-radius: 0.6rem;
   box-shadow: 0 2px 4px hsla(204, 6%, 68%, 0.4);
-  display: flex;
-  height: 6rem;
-  justify-content: center;
-  overflow: hidden;
-  width: 3.5rem;
+  cursor: pointer;
+}
+
+.card__show-number {
+}
+
+.card__number {
+  color: var(--color-secondary);
+  font-weight: bold;
+}
+
+.card-medium:hover {
+  width: 6.3rem;
+  height: 10.3rem;
+  background-color: #d7e9ff;
+  transform: translateY(-1px);
+}
+
+.container__card:hover .card__number {
+  /* color: var(--color-principal); */
+}
+
+.card__name {
+  margin: 10px 0 0 0;
 }
