--- a/src/pages/Dashboard/DashboardPage.css
+++ b/src/pages/Dashboard/DashboardPage.css
@@ -1,14 +1,13 @@
 .list-cards {
-  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
 }
 
-.table__content {
+.body__table {
   width: 100%;
-  height: 50rem;
+  height: 70%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -63,22 +62,18 @@
   background-color: blueviolet;
   display: block;
 }
-.content__show-votes {
-  /* height: 20rem; */
-  /* width: 30rem; */
+.body__show-votes {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   background-color: #d7e9ff;
-  /* border-radius: 2rem; */
 
   background: #d7e9ff;
   border-radius: 2.8rem;
   grid-area: table;
   min-width: 16rem;
   padding: 0 1.6rem;
-  position: relative;
 }
 
 .show-votes__button {
@@ -105,12 +100,14 @@ body {
   margin: 0;
   background-color: #f0f0f0;
 }
+.layout__content {
+  height: 80vh;
+  width: 95vw;
+  display: flex;
+  flex-direction: row;
+}
 
-body {
-  /* display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  margin: 0; */
-  background-color: #f0f0f0;
+.content__body {
+  width: 75%;
+  height: 100%;
 }
